<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayEvent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="#66BCB8B8"
            android:backgroundTint="#66BCB8B8"
            android:ems="10"
            android:gravity=" "
            android:textSize="18dp"
            android:hint="@string/addEventTitle"
            android:inputType="text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:checked="false"
                android:text="@string/addEventAllDay"
                android:enabled="false"
                android:textSize="20dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="117dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/addEventStartDate"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtstart"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:text=""
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/endDate"
                    android:layout_width="136dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/addEventEndDate"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtend"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:text=""
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_weight="1"/>
            </TableRow>

        </LinearLayout>

        <TextView
            android:id="@+id/eventParticipants"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="#66BCB8B8"
            android:backgroundTint="#66BCB8B8"
            android:ems="10"
            android:gravity=" "
            android:hint="@string/addEventParticipants"
            android:inputType="textPersonName"
            android:isScrollContainer="true"
            android:scrollbars="horizontal"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="#66BCB8B8"
            android:backgroundTint="#66BCB8B8"
            android:ems="10"
            android:gravity=" "
            android:textSize="18dp"
            android:hint="@string/addEventDescription"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="#66BCB8B8"
            android:backgroundTint="#66BCB8B8"
            android:ems="10"
            android:gravity=" "
            android:textSize="18dp"
            android:hint="@string/addEventLocation"
            android:inputType="textPersonName" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:backgroundTint="#6B99F1D9"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/displayEventDoYouWantToBeInTheEvent"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/displayEventDenyButton"
                    android:onClick="deny"/>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#9C27B0"
                    android:onClick="accept"
                    android:text="@string/displayEventAcceptButton" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>