<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEvent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/eventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="#66BCB8B8"
                    android:backgroundTint="#66BCB8B8"
                    android:ems="10"
                    android:hint="@string/addEventTitle"
                    android:inputType="text" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:checked="false"
                        android:text="@string/addEventAllDay"
                        android:textSize="20dp"
                        android:onClick="clicked"/>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/startDate"
                            android:layout_width="117dp"
                            android:layout_height="42dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:onClick="StartDate"
                            android:text="@string/addEventStartDate"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/txtstart"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:layout_marginTop="20dp"
                            android:text=""
                            android:gravity="right"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            android:onClick="StartDate"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/endDate"
                            android:layout_width="136dp"
                            android:layout_height="42dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:onClick="EndDate"
                            android:text="@string/addEventEndDate"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/txtend"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:layout_marginTop="20dp"
                            android:text=""
                            android:onClick="EndDate"
                            android:gravity="right"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:layout_weight="1"/>
                    </TableRow>

                </LinearLayout>

                <TextView
                    android:id="@+id/eventParticipants"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:background="#66BCB8B8"
                    android:backgroundTint="#66BCB8B8"
                    android:clickable="true"
                    android:ems="10"
                    android:gravity=" "
                    android:hint="@string/addEventParticipants"
                    android:inputType="textPersonName"
                    android:isScrollContainer="true"
                    android:onClick="participants"
                    android:scrollbars="horizontal"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:background="#66BCB8B8"
                    android:backgroundTint="#66BCB8B8"
                    android:ems="10"
                    android:hint="@string/addEventDescription"
                    android:inputType="textPersonName" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/eventLocation"
                        android:layout_width="337dp"
                        android:layout_height="42dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="#66BCB8B8"
                        android:backgroundTint="#66BCB8B8"
                        android:ems="10"
                        android:hint="@string/addEventLocation"
                        android:inputType="textPersonName" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:onClick="locationPicker"
                        app:icon="@drawable/ic_baseline_location_on_24" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/createLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="185dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C975D6"
                    android:onClick="cancel"
                    android:text="@string/addEventCancelButton" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:onClick="create"
                    android:text="@string/addEventCreateButton" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/editLayout"
                android:layout_width="366dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelEvent"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#C975D6"
                    android:onClick="cancel"
                    android:text="Ακύρωση"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#AA4EB8"
                    android:onClick="delete"
                    android:text="Διαγραφή"
                    android:textSize="12dp" />


                <Button
                    android:id="@+id/save"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="save"
                    android:text="Αποθήκευση"
                    android:textSize="12dp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>